# scrapping_amazon

./: .env  pyproject.toml
data/: amazon_products.csv  amazon_products.xlsx.csv
scrapping_ecommerce/: main.py  scraper.py
